--- a/slides/preamble.tex
+++ b/slides/preamble.tex
@@ -1,5 +1,5 @@
 \documentclass[14pt]{beamer}
-%\documentclass[handout]{beamer} %Makes Handouts
+%\documentclass[handout,14pt]{beamer} %Makes Handouts
 \usetheme{Singapore} %Gray with fade at top
 \useoutertheme[subsection=false]{miniframes} %Supppress subsection in header
 \useinnertheme{rectangles} %Itemize/Enumerate boxes
