small fixes to lecture 2

--- a/slides/lecture02.tex
+++ b/slides/lecture02.tex
@@ -213,7 +213,7 @@ These days, Democrats and Republicans differ from one another considerably. The 
 \begin{quote}\large
 The best criterion for evaluating the quality of an experiment is whether it manipulated the intended independent variable and controlled everything else by design.
 \end{quote}
-\onslide<2->{\small\hspace{5em} --Thomas J. Leeper (5 February 2018)}
+\onslide<2->{\small\hspace{5em} --Thomas J. Leeper (28 June 2018)}
 
 }
 
@@ -352,12 +352,12 @@ The best criterion for evaluating the quality of an experiment is whether it man
 
 \small
 
-\begin{itemize}\itemsep0.5em
+\begin{itemize}\itemsep1em
 \item ``Demand characteristics'' are features of experiments that (unintentionally) imply the purpose of the study and thereby change respondents' behavior (to be consistent with theory)
-\item<2-> Implications:
+\item Implications:
 	\begin{itemize}\footnotesize
 	\item Design experimental treatments that are non-obvious
-	\item Do not disclose the purpose of the study up front\footnote{But, consider the ethics of not doing so (more Friday)}
+	\item Do not disclose the purpose of the study up front\footnote{But, consider the ethics of not doing so (more later)}
 	\end{itemize}
 \end{itemize}
 
